kubernetes/processor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: processor
  labels:
    app: processor
spec:
  replicas: 2
  selector:
    matchLabels:
      app: processor
  template:
    metadata:
      labels:
        app: processor
    spec:
      containers:
        - name: processor
          image: nsbprocessorclusterregistry.azurecr.io/processor
          ports:
          - containerPort: 80
      # imagePullSecrets:
      #   - name: nsb-processor-registry
