kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tasklocker
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
  - host: tasklocker.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8082
